[gd_scene load_steps=17 format=3 uid="uid://dcoesf254yfa"]

[ext_resource type="Script" path="res://Level Scenes/Full Levels/rainController.gd" id="1_d4618"]
[ext_resource type="AudioStream" uid="uid://e7kaerbs11lq" path="res://Sounds/Ambient/THUN_InsJ_Thunder_Extremely-Close_03.wav" id="2_tecre"]
[ext_resource type="AudioStream" uid="uid://dm25vfm36iidg" path="res://Sounds/Ambient/ThunderPowerful.wav" id="2_ux0ua"]
[ext_resource type="AudioStream" uid="uid://drchgkeuo62o8" path="res://Sounds/Ambient/THUN_InsJ_Thunder_Distant_01_EQ.wav" id="3_p8o2p"]

[sub_resource type="Gradient" id="Gradient_1kih0"]
colors = PackedColorArray(1, 1, 1, 0.160784, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_gkipp"]
gradient = SubResource("Gradient_1kih0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_i0f42"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(-20, 2.08165e-12, 2.08165e-12)
emission_shape = 3
emission_box_extents = Vector3(250, 1, 1)
angle_min = 90.0
angle_max = 100.0
direction = Vector3(0.2, 1, 2.08165e-12)
spread = 0.0
initial_velocity_min = 350.46
initial_velocity_max = 350.46
scale_min = 0.3
scale_max = 0.4
color_initial_ramp = SubResource("GradientTexture1D_gkipp")
turbulence_noise_strength = 0.2
turbulence_noise_scale = 3.0
turbulence_noise_speed = Vector3(10, 2.08165e-12, 2.08165e-12)
turbulence_influence_min = 0.079
turbulence_influence_max = 0.079
collision_mode = 2
sub_emitter_mode = 3
sub_emitter_amount_at_collision = 1

[sub_resource type="Gradient" id="Gradient_36gah"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.132456, 0.583799, 0.8027, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ojk77"]
gradient = SubResource("Gradient_36gah")
width = 40

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_6uxju"]
streams_count = 1
stream_0/stream = ExtResource("2_tecre")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_djqjo"]
random_pitch = 1.5
streams_count = 2
stream_0/stream = ExtResource("2_ux0ua")
stream_0/weight = 1.0
stream_1/stream = ExtResource("3_p8o2p")
stream_1/weight = 1.0

[sub_resource type="Gradient" id="Gradient_83kqh"]
offsets = PackedFloat32Array(0, 0.211082, 0.836412, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0.764706, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_nh03v"]
gradient = SubResource("Gradient_83kqh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3v1kl"]
particle_flag_disable_z = true
direction = Vector3(2.08165e-12, -1, 2.08165e-12)
initial_velocity_min = 20.0
initial_velocity_max = 40.0
gravity = Vector3(2.08165e-12, 80, 2.08165e-12)
scale_min = 0.3
scale_max = 0.5
color = Color(0.752941, 0.839216, 1, 1)
color_ramp = SubResource("GradientTexture1D_nh03v")
collision_mode = 2

[sub_resource type="Animation" id="Animation_ga4pc"]
resource_name = "lightning_flash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../lightning_light:energy")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m3l12"]
_data = {
"lightning_flash": SubResource("Animation_ga4pc")
}

[node name="rain_gpuparticles" type="GPUParticles2D"]
position = Vector2(-61, -119)
emitting = false
amount = 200
sub_emitter = NodePath("rain_groundsplash")
process_material = SubResource("ParticleProcessMaterial_i0f42")
texture = SubResource("GradientTexture1D_ojk77")
lifetime = 0.75
fixed_fps = 10
collision_base_size = 4.0
script = ExtResource("1_d4618")
lightning_on = false
thunder_close = SubResource("AudioStreamRandomizer_6uxju")
thunder_far = SubResource("AudioStreamRandomizer_djqjo")

[node name="thunder_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_p8o2p")
volume_db = -30.0
pitch_scale = 1.3
bus = &"Sound-far"

[node name="rain_groundsplash" type="GPUParticles2D" parent="."]
position = Vector2(29, 18)
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_3v1kl")
lifetime = 0.8
fixed_fps = 10

[node name="rain_canvasModulate" type="CanvasModulate" parent="."]
position = Vector2(61, 119)

[node name="lightning_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="lightning_light" type="DirectionalLight2D" parent="."]
energy = 0.0

[node name="lightning_animationplayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../rain_canvasModulate")
libraries = {
"": SubResource("AnimationLibrary_m3l12")
}

[connection signal="timeout" from="lightning_timer" to="." method="_on_lightning_timer_timeout"]
